force-app/main/default/objects/CSR_Patient__c/CSR_Patient__c.object-meta.xml
<CustomObject>
    <label>CSR Patient</label>
    <nameField>
        <displayFormat>PAT-{000000000}</displayFormat>
        <label>Patient Sequence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSR Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>