force-app/main/default/objects/CSR_Patient__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Age Group</label>
    <referenceTo>Ref_Age_Group__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>