force-app/main/default/objects/CSR_Patient__c/fields/Age_Unit__c.field-meta.xml
<CustomField>
    <fullName>Age_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Age Unit</label>
    <referenceTo>Ref_Age_Unit__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>