force-app/main/default/objects/CSR_Patient__c/fields/Autopsy_Done__c.field-meta.xml
<CustomField>
    <fullName>Autopsy_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autopsy Done</label>
    <type>Checkbox</type>
</CustomField>