force-app/main/default/objects/CSR_Patient__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <inlineHelpText>try DD-MM-YYYY</inlineHelpText>
    <label>Birth Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>