force-app/main/default/objects/CSR_Patient__c/fields/Birth_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_Actual__c</fullName>
    <label>Birth Date Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>