force-app/main/default/objects/CSR_Patient__c/fields/Birth_Date_Derived__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_Derived__c</fullName>
    <label>Birth Date Derived</label>
    <type>Date</type>
</CustomField>