force-app/main/default/objects/CSR_Patient__c/fields/Con_Com_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Con_Com_Therapy__c</fullName>
    <label>Con Com Therapy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>