force-app/main/default/objects/CSR_Patient__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSR</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>