force-app/main/default/objects/CSR_Patient__c/fields/Death_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Date__c</fullName>
    <label>Death Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>