force-app/main/default/objects/CSR_Patient__c/fields/Death_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Death_Date_Actual__c</fullName>
    <label>Death Date Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>