force-app/main/default/objects/CSR_Patient__c/fields/Death_Date_Derived__c.field-meta.xml
<CustomField>
    <fullName>Death_Date_Derived__c</fullName>
    <label>Death Date Derived</label>
    <type>Date</type>
</CustomField>