force-app/main/default/objects/CSR_Patient__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gender</label>
    <referenceTo>Ref_Gender__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>