force-app/main/default/objects/CSR_Patient__c/fields/Gestation_Age__c.field-meta.xml
<CustomField>
    <fullName>Gestation_Age__c</fullName>
    <label>Gestation Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>