force-app/main/default/objects/CSR_Patient__c/fields/Gestation_Age_Unit__c.field-meta.xml
<CustomField>
    <fullName>Gestation_Age_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestation Age Unit</label>
    <referenceTo>Ref_Gestation_Period_Unit__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>