force-app/main/default/objects/CSR_Patient__c/fields/Height_Unit__c.field-meta.xml
<CustomField>
    <fullName>Height_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Height Unit</label>
    <referenceTo>Ref_Height_Unit__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>