force-app/main/default/objects/CSR_Patient__c/fields/Initial__c.field-meta.xml
<CustomField>
    <fullName>Initial__c</fullName>
    <label>Initial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>