force-app/main/default/objects/CSR_Patient__c/fields/LMP_Date__c.field-meta.xml
<CustomField>
    <fullName>LMP_Date__c</fullName>
    <description>Last Menstrual Period Date</description>
    <inlineHelpText>Last Menstrual Period Date</inlineHelpText>
    <label>LMP Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>