force-app/main/default/objects/CSR_Patient__c/fields/LMP_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>LMP_Date_Actual__c</fullName>
    <label>LMP Date Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>