force-app/main/default/objects/CSR_Patient__c/fields/LMP_Date_Derived__c.field-meta.xml
<CustomField>
    <fullName>LMP_Date_Derived__c</fullName>
    <label>LMP Date Derived</label>
    <type>Date</type>
</CustomField>