force-app/main/default/objects/CSR_Patient__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>