force-app/main/default/objects/CSR_Patient__c/fields/Medical_History_Availability__c.field-meta.xml
<CustomField>
    <fullName>Medical_History_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical History Availability</label>
    <referenceTo>Ref_Med_Hist_Availability__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>