force-app/main/default/objects/CSR_Patient__c/fields/Medical_History_ZH__c.field-meta.xml
<CustomField>
    <fullName>Medical_History_ZH__c</fullName>
    <label>Medical History (Chinese)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>