force-app/main/default/objects/CSR_Patient__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <description>This field can be used to record patient&#39;s initial as well as name.</description>
    <label>Patient Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>