force-app/main/default/objects/CSR_Patient__c/fields/Pregnant__c.field-meta.xml
<CustomField>
    <fullName>Pregnant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pregnant</label>
    <type>Checkbox</type>
</CustomField>