force-app/main/default/objects/CSR_Patient__c/fields/Randomization_Number__c.field-meta.xml
<CustomField>
    <fullName>Randomization_Number__c</fullName>
    <label>Randomization Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>