force-app/main/default/objects/CSR_Patient__c/fields/Related_Patient__c.field-meta.xml
<CustomField>
    <fullName>Related_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Patient</label>
    <referenceTo>CSR_Patient__c</referenceTo>
    <relationshipName>Parents</relationshipName>
    <type>Lookup</type>
</CustomField>