force-app/main/default/objects/CSR_Patient__c/fields/Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>Subject_Id__c</fullName>
    <label>Subject Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>