force-app/main/default/objects/CSR_Patient__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>