force-app/main/default/objects/CSR_Patient__c/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weight Unit</label>
    <referenceTo>Ref_Weight_Unit__c</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>