force-app/main/default/objects/CSR_Patient__c/recordTypes/Father.recordType-meta.xml
<RecordType>
    <fullName>Father</fullName>
    <active>true</active>
    <description>Patient&#39;s Father Data Record</description>
    <label>Father</label>
</RecordType>