force-app/main/default/objects/CSR_Patient__c/recordTypes/Mother.recordType-meta.xml
<RecordType>
    <fullName>Mother</fullName>
    <active>true</active>
    <description>Patient&#39;s Mother Data Record</description>
    <label>Mother</label>
</RecordType>