force-app/main/default/objects/CSR_Patient__c/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <description>Patient&#39;s Data Record</description>
    <label>Patient</label>
</RecordType>